# metaflow-temporal

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  ux_test_config.yaml
.github/workflows/: ci.yml  e2e.yml  publish.yml  ux-tests.yml
metaflow_extensions/temporal/plugins/: mfextinit_temporal.py
metaflow_extensions/temporal/plugins/temporal/: __init__.py  exception.py  saga.py  temporal.py  temporal_cli.py  temporal_decorator.py  temporal_deployer.py  temporal_deployer_objects.py  worker_template.mustache  worker_utils.py
tests/: conftest.py  test_adversarial.py  test_e2e.py  test_integration.py
tests/flows/: artifact_flow.py  branch_flow.py  conditional_flow.py  config_flow.py  foreach_flow.py  foreach_saga_flow.py  linear_flow.py  param_flow.py  project_flow.py  retry_flow.py  saga_flow.py  scheduled_flow.py  switch_flow.py
