[project]
name = "metaflow-temporal"
version = "0.1.1"
description = "Run Metaflow flows as Temporal workflows"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Nissan Pow", email = "nissan.pow@gmail.com" }]
keywords = ["metaflow", "temporal", "workflow", "orchestration", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "metaflow>=2.9",
    "temporalio>=1.0",
    "click>=8.0",
    "chevron>=0.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.0",
    "temporalio[testing]>=1.0",
]

[project.urls]
Homepage = "https://github.com/npow/metaflow-temporal"
Repository = "https://github.com/npow/metaflow-temporal"

[tool.setuptools.packages.find]
include = ["metaflow_extensions*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires external Temporal server (docker-compose)",
]
